--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3911,6 +3911,8 @@ body {
   line-height: 1.625;
 }
 
+.entry-content > p { text-indent:2em; }
+
 .entry-content p > a,
 .entry-content li > a {
   border-bottom: 1px dotted #a2a2a2;
