--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4026,12 +4026,17 @@ body {
 
 .entry-image {
   position: relative;
-  top: -50%;
+/*  top: -50%;
   left: -50%;
   width: 200%;
-  height: 200%;
+  height: 200%;*/
   min-height: 400px;
   overflow: hidden;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: scroll;
 }
 
 .entry-image:after {
