--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -16,4 +16,4 @@
   ga('send', 'pageview');
 </script>
 {% endif %}
-{% if page.comments %}{% include disqus_comments.html %}{% endif %}
+{% if page.comments %}{% include duoshuo_comments.html %}{% endif %}
