--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,11 +25,7 @@
   <article class="hentry">
     <header class="header-title">
       <div class="header-title-wrap">
-        {% if page.link %}
-          <h1 class="entry-title"><a href="{{ page.link }}">{{ page.title }}</a></h1>
-        {% else %}
-          <h1 class="entry-title"><a href="{{ site.url }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a></h1>
-        {% endif %}
+        <h1 class="entry-title"><a href="{{ site.url }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a>{% if page.link %} <sup><a class="fa fa-external-link" href="{{ page.link }}"></a></sup>{% endif %}</h1>
         <h2>{{ page.date | date: "%B %d, %Y" }}</h2>
         {% if site.reading_time %}
         <p class="entry-reading-time">
