--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -34,11 +34,21 @@
         {% if page.modified %}{{ page.title }} was last modified on <span class="entry-date date modified"><time datetime="{{ page.modified }}">{{ page.modified }}</time></span>
         <span class="author vcard fn">{{ site.owner.name }}</span>{% endif %}
         {% if page.share %}<div class="social-share">
-          <ul class="socialcount socialcount-small inline-list" data-url="{{ site.url }}{{ page.url }}" data-share-text="{{ page.title }}">
-            <li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook"><span class="count"><i class="fa fa-facebook-square"></i> Like</span></a></li>
-            <li class="twitter"><a href="https://twitter.com/intent/tweet?text={{ site.url }}{{ page.url }}" title="Share on Twitter"><span class="count"><i class="fa fa-twitter-square"></i> Tweet</span></a></li>
-            <li class="googleplus"><a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google Plus"><span class="count"><i class="fa fa-google-plus-square"></i> +1</span></a></li>
+          <!-- Using JiaThis here -->
+          <style type="text/css">ul.socialcount li{cursor:pointer;}</style>
+          <ul class="socialcount socialcount-small inline-list">
+            <li><a class="jiathis_button_weixin"><i class="fa fa-weixin"></i></a></li>
+            <li><a class="jiathis_button_renren"><i class="fa fa-renren"></i> </a></li>
+            <li><a class="jiathis_button_tsina"><i class="fa fa-weibo"></i> </a></li>
+            <li><a class="jiathis_button_email"><i class="fa fa-envelope"></i> </a></li>
           </ul>
+          <script type="text/javascript" >
+            var jiathis_config={
+              title:"《{{page.title }}》",
+              summary:"{{ content | split:"</p>" | first | remove_first:'<p>' }}"
+            }
+          </script>
+          <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
         </div><!-- /.social-share -->{% endif %}
       </footer>
     </div><!-- /.entry-content -->
