--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,8 @@
 	<button class="dl-trigger">展开菜单</button>
 	<ul class="dl-menu">
 		<li><a href="{{ site.url }}">首页</a></li>
+		<li><a href="{{ site.url }}/posts/">时光轴</a></li>
+		<li><a href="{{ site.url }}/tags/">标签云</a></li>
 		<li>
 			<a href="#">关于</a>
 			<ul class="dl-submenu">
@@ -10,46 +12,8 @@
 					<h4>{{ site.owner.name }}</h4>
 					<p>{{ site.owner.bio }}</p>
 				</li>
-				<!-- <li><a href="{{ site.url }}/about/">了解更多</a></li> -->
-				{% if site.owner.email %}<li>
-					<a href="mailto:{{ site.owner.email }}"><i class="fa fa-envelope"></i> Email</a>
-				</li>{% endif %}
-				{% if site.owner.twitter %}<li>
-					<a href="http://twitter.com/{{ site.owner.twitter }}"><i class="fa fa-twitter"></i> Twitter</a>
-				</li>{% endif %}
-				{% if site.owner.facebook %}<li>
-					<a href="http://facebook.com/{{ site.owner.facebook }}"><i class="fa fa-facebook"></i> Facebook</a>
-				</li>{% endif %}
-				{% if site.owner.google_plus %}<li>
-					<a href="{{ site.owner.google_plus }}"><i class="fa fa-google-plus"></i> Google+</a>
-				</li>{% endif %}
-				{% if site.owner.linkedin %}<li>
-					<a href="http://linkedin.com/in/{{ site.owner.linkedin }}"><i class="fa fa-linkedin"></i> LinkedIn</a>
-				</li>{% endif %}
-				{% if site.owner.github %}<li>
-					<a href="http://github.com/{{ site.owner.github }}"><i class="fa fa-github"></i> GitHub</a>
-				</li>{% endif %}
-				{% if site.owner.stackexchange %}<li>
-					<a href="{{ site.owner.stackexchange }}"><i class="fa fa-stack-exchange"></i> Stackexchange</a>
-				</li>{% endif %}
-				{% if site.owner.instagram %}<li>
-					<a href="http://instagram.com/{{ site.owner.instagram }}"><i class="fa fa-instagram"></i> Instagram</a>
-				</li>{% endif %}
-				{% if site.owner.flickr %}<li>
-					<a href="http://www.flickr.com/photos/{{ site.owner.flickr }}"><i class="fa fa-flickr"></i> Flickr</a>
-				</li>{% endif %}
-				{% if site.owner.tumblr %}<li>
-					<a href="http://{{ site.owner.tumblr }}.tumblr.com"><i class="fa fa-tumblr"></i> Tumblr</a>
-				</li>{% endif %}
+				<li><a href="http://aidistan.net"><i class="fa fa-home"></i> 归根</a></li>
 			</ul><!-- /.dl-submenu -->
 		</li>
-		<li>
-			<a href="#">日志</a>
-			<ul class="dl-submenu">
-				<li><a href="{{ site.url }}/posts/">按时间</a></li>
-				<li><a href="{{ site.url }}/tags/">按标签</a></li>
-			</ul>
-		</li>
-		{% for link in site.links %}<li>{% if link.external %}<a href="{{ link.url }}">{{ link.title }}</a>{% else %}<a href="{{ site.url }}{{ link.url }}">{{ link.title }}</a>{% endif %}</li>{% endfor %}
 	</ul><!-- /.dl-menu -->
 </nav><!-- /.dl-menuwrapper -->
