--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav id="dl-menu" class="dl-menuwrapper" role="navigation">
 	<button class="dl-trigger">展开菜单</button>
 	<ul class="dl-menu">
-		<li><a href="{{ site.url }}">首页</a></li>
+		<li><a href="{{ site.url }}/">首页</a></li>
 		<li><a href="{{ site.url }}/posts/">时光轴</a></li>
 		<li><a href="{{ site.url }}/tags/">标签云</a></li>
 		<li>
