--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,11 @@
+<!-- browser-upgrade -->
+<!--[if lt IE 9]><div class="upgrade"><strong><a href="http://whatbrowser.org/">Your browser is quite old!</strong> Why not upgrade to a different browser to better enjoy this site?</a></div><![endif]-->
+
+<!-- navigation -->
 <nav id="dl-menu" class="dl-menuwrapper" role="navigation">
 	<button class="dl-trigger">展开菜单</button>
 	<ul class="dl-menu">
-		<li><a href="{{ site.url }}/">首页</a></li>
+		<li><a href="{{ site.url }}">首页</a></li>
 		<li><a href="{{ site.url }}/posts/">时光轴</a></li>
 		<li><a href="{{ site.url }}/tags/">标签云</a></li>
 		<li>
