--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -4,12 +4,12 @@
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="zh"><![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="zh"><!--<![endif]-->
 <head>
-{% include head.html %}
+{% include _head.html %}
 </head>
 
 <body id="post-index" {% if page.image.feature %}class="feature"{% endif %}>
 
-{% include navigation.html %}
+{% include _navigation.html %}
 
 <div class="entry-header">
   {% if page.image.credit %}<div class="image-credit">封图: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></div><!-- /.image-credit -->{% endif %}
@@ -32,11 +32,11 @@
 
 <div class="footer-wrapper">
   <footer role="contentinfo">
-    {% include footer.html %}
+    {% include _footer.html %}
   </footer>
 </div><!-- /.footer-wrapper -->
 
-{% include scripts.html %}          
+{% include _scripts.html %}          
 
 </body>
 </html>
