--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,12 +4,12 @@
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="zh"><![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="zh"><!--<![endif]-->
 <head>
-{% include head.html %}
+{% include _head.html %}
 </head>
 
 <body id="post" {% if page.image.feature %}class="feature"{% endif %}>
 
-{% include navigation.html %}
+{% include _navigation.html %}
 
 {% if page.image.feature %}
 <div class="entry-header">
@@ -82,11 +82,11 @@
 
 <div class="footer-wrapper">
   <footer role="contentinfo">
-    {% include footer.html %}
+    {% include _footer.html %}
   </footer>
 </div><!-- /.footer-wrapper -->
 
-{% include scripts.html %}	        
+{% include _scripts.html %}	        
 
 </body>
 </html>
