--- a/_includes/_scripts.html
+++ b/_includes/_scripts.html
@@ -4,7 +4,7 @@
 <script>window.jQuery || document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 <script src="{{ site.url }}/assets/js/scripts.min.js"></script>
 
-{% if page.comments %}
+{% if site.duoshuo_shortname and page.comments %}
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
 var duoshuoQuery = {short_name:"{{ site.duoshuo_shortname }}"};
