--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,15 +25,14 @@
     <header class="header-title">
       <div class="header-title-wrap">
         <h1 class="entry-title"><a href="{{ site.url }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a>{% if page.link %} <sup><a class="fa fa-external-link" target="_blank" href="{{ page.link }}"></a></sup>{% endif %}</h1>
-        <h2>{{ page.date | date: "%B %d, %Y" }}</h2>
       </div><!-- /.header-title-wrap -->
     </header>
     <div class="entry-content">
+      {% if page.description %}<p class="description">{{ page.description }}</p>{% endif %}
       {{ content }}
       <footer class="entry-meta">
         <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}" class="tag">{{ tag }}</a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
-        <span><a href="{{ site.url }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">《{{ page.title }}》</a>发表于<span class="entry-date date published updated"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y年%-m月%-d日" }}</time></span></span>
-        {% if page.modified %}(最新修订: <span class="entry-date date modified"><time datetime="{{ page.modified }}">{{ page.modified | date: "%Y/%m/%d" }}</time></span>){% endif %}
+        <span>发表日期: <span class="entry-date date published updated"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y/%m/%d" }}</time></span> | 最新修订: <span class="entry-date date modified"><time datetime="{{ page.modified }}">{{ page.modified | date: "%Y/%m/%d" }}</time></span></span>
         {% if page.share %}<div class="social-share">
           <!-- Using JiaThis here -->
           <style type="text/css">ul.socialcount li{cursor:pointer;}</style>
@@ -58,25 +57,6 @@
     <!-- 多说评论框 end -->
     {% endif %}
     </div><!-- /.entry-content -->
-    <div class="read-more">
-      <div class="read-more-header">
-        <a href="{{ site.url }}{{ page.previous.url }}" class="read-more-btn">更多内容</a>
-      </div><!-- /.read-more-header -->
-      <div class="read-more-list">
-        {% if page.previous %}
-          <div class="list-item">
-            <h4><a href="{{ site.url }}{{ page.previous.url }}" title="{{ page.previous.title }}">{{ page.previous.title }}</a></h4>
-            <span>发表于{{ page.previous.date | date: "%Y年%-m月%-d日" }}</span>
-          </div><!-- /.list-item -->
-        {% endif %}
-        {% if page.next %}
-          <div class="list-item">
-            <h4><a href="{{ site.url }}{{ page.next.url }}" title="{{ page.next.title }}">{{ page.next.title }}</a></h4>
-            <span>发表于{{ page.next.date | date: "%Y年%-m月%-d日" }}</span>
-          </div><!-- /.list-item -->
-        {% endif %}
-      </div><!-- /.read-more-list -->
-    </div><!-- /.read-more -->
   </article>
 </div><!-- /#main -->
 
