--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4181,42 +4181,15 @@ body {
     padding: 50px 80px;
     margin: 50px auto 30px auto;
   }
-  #post .entry-content > p:first-child,
-  #page .entry-content > p:first-child {
+  #post .entry-content > p.description,
+  #page .entry-content > p.description {
     margin-bottom: 26px;
     margin-bottom: 1.625rem;
+    padding: 10px;
+    background-color: #e8e8e8;
     font-size: 20px;
     font-size: 1.25rem;
     line-height: 1.3;
-  }
-}
-
-#post #disqus_thread,
-#page #disqus_thread {
-  padding: 10px 15px;
-  margin: 40px 2px 20px 2px;
-  background-color: #ffffff;
-  -webkit-border-radius: 3px;
-     -moz-border-radius: 3px;
-          border-radius: 3px;
-  box-shadow: 0 0 0 1px rgba(187, 187, 187, 0.1), 0 6px 12px rgba(0, 0, 0, 0.1);
-}
-
-@media only screen and (min-width: 48em) {
-  #post #disqus_thread,
-  #page #disqus_thread {
-    padding: 20px 30px;
-    margin-right: 10px;
-    margin-left: 10px;
-  }
-}
-
-@media only screen and (min-width: 62.5em) {
-  #post #disqus_thread,
-  #page #disqus_thread {
-    max-width: 800px;
-    padding: 50px 80px;
-    margin: 0 auto 30px auto;
   }
 }
 
