Improve _includes/xiami

--- a/_includes/xiami.html
+++ b/_includes/xiami.html
@@ -1,4 +1,4 @@
 <!-- Xiami widget (虾米播播)-->
-<div style="width:300px;height:120px;margin:0 auto;overflow:hidden;">
+<div style="width:300px;height:120px;margin:20px auto;overflow:hidden;">
 	<embed src="http://www.xiami.com/widget/10539699_{{ include.sid }}_300_500_bbbbbb_dddddd_1/multiPlayer.swf" type="application/x-shockwave-flash" width="300" height="500" wmode="opaque"></embed>
 </div>
