--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@
       </div><!-- /.header-title-wrap -->
     </header>
     <div class="entry-content">
-      {% if page.description %}<p class="description">{{ page.description }}</p>{% endif %}
+      {% if page.description %}<blockquote>总而言之：{{ page.description }}</blockquote>{% endif %}
       {{ content }}
       <footer class="entry-meta">
         <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}" class="tag">{{ tag }}</a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
