--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@
   <article class="hentry">
     <header class="header-title">
       <div class="header-title-wrap">
-        <h1 class="entry-title"><a href="{{ site.url }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a>{% if page.link %} <sup><a class="fa fa-external-link" target="_blank" href="{{ page.link }}"></a></sup>{% endif %}</h1>
+        <h1 class="entry-title"><a href="{{ site.url }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a>{% if page.link %} <sup><a class="fa fa-external-link" href="{{ page.link }}"></a></sup>{% endif %}</h1>
       </div><!-- /.header-title-wrap -->
     </header>
     <div class="entry-content">
