--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,15 +1,10 @@
-<!doctype html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="zh"> <![endif]-->
-<!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="zh"><![endif]-->
-<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="zh"><![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="zh"><!--<![endif]-->
-<head>
-{% include _head.html %}
-</head>
+---
+layout: default
+---
 
 <body id="post-index" {% if page.image.feature %}class="feature"{% endif %}>
 
-{% include _navigation.html %}
+{% include _navmenu.html %}
 
 <div class="entry-header">
   {% if page.image.credit %}<div class="image-credit">封图: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></div><!-- /.image-credit -->{% endif %}
@@ -29,14 +24,3 @@
 <div id="main" role="main">
   {{ content }}
 </div><!-- /#main -->
-
-<div class="footer-wrapper">
-  <footer role="contentinfo">
-    {% include _footer.html %}
-  </footer>
-</div><!-- /.footer-wrapper -->
-
-{% include _scripts.html %}          
-
-</body>
-</html>
