--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,15 +1,10 @@
-<!doctype html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="zh"> <![endif]-->
-<!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="zh"><![endif]-->
-<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="zh"><![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="zh"><!--<![endif]-->
-<head>
-{% include _head.html %}
-</head>
+---
+layout: default
+---
 
 <body id="page" {% if page.image.feature %}class="feature"{% endif %}>
 
-{% include _navigation.html %}
+{% include _navmenu.html %}
 
 {% if page.image.feature %}
 <div class="entry-header">
@@ -53,14 +48,3 @@
     </div><!-- /.entry-content -->
   </article>
 </div><!-- /#main -->
-
-<div class="footer-wrapper">
-  <footer role="contentinfo">
-    {% include _footer.html %}
-  </footer>
-</div><!-- /.footer-wrapper -->
-
-{% include _scripts.html %}
-
-</body>
-</html>
