--- a/_includes/_navmenu.html
+++ b/_includes/_navmenu.html
@@ -5,18 +5,17 @@
 <nav id="dl-menu" class="dl-menuwrapper" role="navigation">
 	<button class="dl-trigger">展开菜单</button>
 	<ul class="dl-menu">
-		<li><a href="{{ site.url }}">首页</a></li>
-		<li><a href="{{ site.url }}/posts/">时光轴</a></li>
-		<li><a href="{{ site.url }}/tags/">标签云</a></li>
+		<li><a href="{{ site.url }}"><i class="fa fa-fw fa-home"></i> 首页</a></li>
+		<li><a href="{{ site.url }}/posts/"><i class="fa fa-fw fa-clock-o"></i> 时光轴</a></li>
+		<li><a href="{{ site.url }}/tags/"><i class="fa fa-fw fa-tags"></i> 标签云</a></li>
 		<li>
-			<a href="#">关于</a>
+			<a href="#"><i class="fa fa-fw fa-bars"></i> 关于</a>
 			<ul class="dl-submenu">
 				<li>
 					<img src="{{ site.url }}/images/{{ site.owner.avatar }}" alt="{{ site.owner.name }} photo" class="author-photo">
 					<h4>{{ site.owner.name }}</h4>
 					<p>{{ site.owner.bio }}</p>
 				</li>
-				<li><a href="http://aidistan.net"><i class="fa fa-home"></i> 归根</a></li>
 			</ul><!-- /.dl-submenu -->
 		</li>
 	</ul><!-- /.dl-menu -->
