--- a/_includes/xiami.html
+++ b/_includes/xiami.html
@@ -2,3 +2,9 @@
 <div style="width:300px;height:120px;margin:20px auto;overflow:hidden;">
 	<embed src="http://www.xiami.com/widget/10539699_{{ include.sid }}_300_500_bbbbbb_dddddd_1/multiPlayer.swf" type="application/x-shockwave-flash" width="300" height="500" wmode="opaque"></embed>
 </div>
+
+<!-- Usage: 
+
+[% include xiami.html sid="1773427589," %]
+
+-->
