--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,8 @@
 
   <div class="footer-wrapper">
     <footer role="contentinfo">
-      <span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Proudly powered by <a href="http://jekyllrb.com">Jekyll</a> using a customized <a href="http://mademistakes.com/hpstr/">HPSTR Theme</a>.</span>
+      <div>Copyright &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}, All Rights Reserved.</div>
+      <div>Proudly published by <a href="http://jekyllrb.com">Jekyll</a>, using a customized <a href="http://mademistakes.com/hpstr/">HPSTR Theme</a>.</div>
     </footer>
   </div><!-- /.footer-wrapper -->
 
