--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,7 +46,7 @@ layout: default
           <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
         </div><!-- /.social-share -->{% endif %}
       </footer>
-    {% if site.duoshuo_shortname and page.comments %}
+    {% if site.duoshuo and page.comments %}
     <!-- 多说评论框 start -->
     <div class="ds-thread" data-thread-key="{{ page.comments }} " data-title="{{ page.title }}" data-url="{{ site.duoshuo_url }}{{ page.url }}"></div>
     <!-- 多说评论框 end -->
