--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3881,7 +3881,7 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
-  background-color: #f8f8f8;
+  background-color: #fff;
 }
 
 .entry,
@@ -4158,11 +4158,11 @@ body {
 #page .entry-content {
   padding: 10px 15px;
   margin: 40px 2px 20px 2px;
-  background-color: #ffffff;
+/*  background-color: #ffffff;
   -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
           border-radius: 3px;
-  box-shadow: 0 0 0 0, 0 6px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0 0, 0 6px 12px rgba(0, 0, 0, 0.1);*/
 }
 
 @media only screen and (min-width: 48em) {
@@ -4179,7 +4179,8 @@ body {
   #page .entry-content {
     max-width: 800px;
     padding: 50px 80px;
-    margin: 50px auto 30px auto;
+    margin: 0px auto 0px auto;
+    /*margin: 50px auto 30px auto;*/
   }
   #post .entry-content > p.description,
   #page .entry-content > p.description {
@@ -4383,12 +4384,12 @@ body {
 
 #post-index article {
   padding: 25px 15px;
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
   background-color: #ffffff;
-  -webkit-border-radius: 3px;
+/*  -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
           border-radius: 3px;
-  box-shadow: 0 0 0 0, 0 6px 12px rgba(34, 34, 34, 0.1);
+  box-shadow: 0 0 0 0, 0 6px 12px rgba(0, 0, 0, 0.618);*/
 }
 
 @media only screen and (min-width: 48em) {
@@ -4399,8 +4400,9 @@ body {
 
 @media only screen and (min-width: 62.5em) {
   #post-index article {
-    padding: 50px 80px;
-    margin-bottom: 30px;
+    padding: 30px 60px;
+    /*padding: 50px 80px;*/
+    /*margin-bottom: 30px;*/
   }
 }
 
