--- a/_includes/_navmenu.html
+++ b/_includes/_navmenu.html
@@ -6,8 +6,14 @@
 	<button class="dl-trigger">展开菜单</button>
 	<ul class="dl-menu">
 		<li><a href="{{ site.url }}"><i class="fa fa-fw fa-home"></i> 首页</a></li>
-		<li><a href="{{ site.url }}/posts/"><i class="fa fa-fw fa-clock-o"></i> 时光轴</a></li>
-		<li><a href="{{ site.url }}/tags/"><i class="fa fa-fw fa-tags"></i> 标签云</a></li>
+		<li><a href="{{ site.url }}/posts/"><i class="fa fa-fw fa-clock-o"></i> 时光</a></li>
+		<li><a href="{{ site.url }}/tags/"><i class="fa fa-fw fa-tags"></i> 标签</a></li>
+		<li>
+			<a href="#"><i class="fa fa-fw fa-ellipsis-h"></i> 更多</a>
+			<ul class="dl-submenu">
+				<li><a href="{{ site.url }}/convict/"><i class="fa fa-fw fa-power-off"></i> 囚徒日记</a></li>
+			</ul><!-- /.dl-submenu -->
+		</li>
 		<li>
 			<a href="#"><i class="fa fa-fw fa-bars"></i> 关于</a>
 			<ul class="dl-submenu">
