--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,24 +10,24 @@
   <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
   {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
   {% if page.tags %}<meta name="keywords" content="{{ page.tags | join: ', ' }}">{% endif %}
-  <link href="{{ site.url }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
+  <link href="{{ site.baseurl }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
   <!-- For all browsers -->
-  <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
   <!-- Load Modernizr -->
-  <script src="{{ site.url }}/assets/js/modernizr-2.6.2.custom.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/modernizr-2.6.2.custom.min.js"></script>
   <!-- Icons -->
   <!-- 16x16 -->
-  <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
   <!-- 32x32 -->
-  <link rel="shortcut icon" href="{{ site.url }}/favicon.png">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.png">
   <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
-  <link rel="apple-touch-icon-precomposed" href="{{ site.url }}/images/apple-touch-icon-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/apple-touch-icon-precomposed.png">
   <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/images/apple-touch-icon-72x72-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.baseurl }}/images/apple-touch-icon-72x72-precomposed.png">
   <!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/images/apple-touch-icon-114x114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.baseurl }}/images/apple-touch-icon-114x114-precomposed.png">
   <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/images/apple-touch-icon-144x144-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/images/apple-touch-icon-144x144-precomposed.png">
 </head>
 
 <!-- <body> should be placed in the content -->
@@ -41,7 +41,7 @@
   </div><!-- /.footer-wrapper -->
 
   <script src="http://libs.baidu.com/jquery/1.9.1/jquery.js"></script>
-  <script src="{{ site.url }}/assets/js/scripts.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/scripts.min.js"></script>
 
   <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
   {% if site.duoshuo %}<script type="text/javascript">
