--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,8 +9,8 @@ layout: default
 <div class="entry-header">
   {% if page.image.credit %}<div class="image-credit">封图: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></div><!-- /.image-credit -->{% endif %}
   {% if page.image.feature %}
-    <div class="entry-image" style="background-image: url({{ site.url }}/images/{{ page.image.feature }});">
-      <!-- <img src="{{ site.url }}/images/{{ page.image.feature }}" alt="{{ page.title }}"> -->
+    <div class="entry-image" style="background-image: url({{ site.baseurl }}/images/{{ page.image.feature }});">
+      <!-- <img src="{{ site.baseurl }}/images/{{ page.image.feature }}" alt="{{ page.title }}"> -->
     </div><!-- /.entry-image -->
   {% endif %}
   <div class="header-title">
