--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,8 +9,8 @@ layout: default
 {% if page.image.feature %}
 <div class="entry-header">
   {% if page.image.credit %}<div class="image-credit">封图: {% if page.image.creditlink %}<a href="{{ page.image.creditlink }}">{% endif %}{{ page.image.credit }}{% if page.image.creditlink %}</a>{% endif %}</div><!-- /.image-credit -->{% endif %}
-  <div class="entry-image" style="background-image: url({{ site.url }}/images/{{ page.image.feature }});">
-    <!-- <img src="{{ site.url }}/images/{{ page.image.feature }}" alt="{{ page.title }}"> -->
+  <div class="entry-image" style="background-image: url({{ site.baseurl }}/images/{{ page.image.feature }});">
+    <!-- <img src="{{ site.baseurl }}/images/{{ page.image.feature }}" alt="{{ page.title }}"> -->
   </div><!-- /.entry-image -->
 </div><!-- /.entry-header -->
 {% endif %}
@@ -19,14 +19,14 @@ layout: default
   <article class="hentry">
     <header class="header-title">
       <div class="header-title-wrap">
-        <h1 class="entry-title"><a href="{{ site.url }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a>{% if page.link %} <sup><a class="fa fa-external-link" href="{{ page.link }}"></a></sup>{% endif %}</h1>
+        <h1 class="entry-title"><a href="{{ site.baseurl }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a>{% if page.link %} <sup><a class="fa fa-external-link" href="{{ page.link }}"></a></sup>{% endif %}</h1>
       </div><!-- /.header-title-wrap -->
     </header>
     <div class="entry-content">
       {% if page.description %}<blockquote>总而言之：{{ page.description }}</blockquote>{% endif %}
       {{ content }}
       <footer class="entry-meta">
-        <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}" class="tag">{{ tag }}</a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
+        <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.baseurl }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}" class="tag">{{ tag }}</a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
         <span>发表日期: <span class="entry-date date published updated"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y/%m/%d" }}</time></span> | 最新修订: <span class="entry-date date modified"><time datetime="{{ page.modified }}">{{ page.modified | date: "%Y/%m/%d" }}</time></span></span>
         <div class="social-share"><!-- Using JiaThis here -->
           <style type="text/css">ul.socialcount li{cursor:pointer;}</style>
