Prepare to refine layouts

--- a/_includes/_navmenu.html
+++ b/_includes/_navmenu.html
@@ -11,6 +11,7 @@
 		<li>
 			<a href="#"><i class="fa fa-fw fa-ellipsis-h"></i> 更多</a>
 			<ul class="dl-submenu">
+				<li><a href="{{ site.baseurl }}/notes/"><i class="fa fa-fw fa-book"></i> 知识笔记</a></li>
 				<li><a href="{{ site.baseurl }}/convict/"><i class="fa fa-fw fa-power-off"></i> 囚徒日记</a></li>
 			</ul><!-- /.dl-submenu -->
 		</li>
