--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -100,9 +100,9 @@ body {
 }
 .entry-image {
 	position: relative;
-	top: -50%; 
-	left: -50%; 
-	width: 200%; 
+	top: -50%;
+	left: -50%;
+	width: 200%;
 	height: 200%;
 	min-height: 400px;
 	overflow: hidden;
@@ -116,12 +116,12 @@ body {
 		background-color: rgba($base-color,0.3);
 	}
 	img {
-		position: absolute; 
-		top: 0; 
-		left: 0; 
-		right: 0; 
-		bottom: 0; 
-		margin: auto; 
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
 		min-width: 50%;
 		min-height: 50%;
 	}
@@ -187,8 +187,7 @@ body {
 		}
 	}
 }
-#post,
-#page {
+#post {
 	.entry-content {
 		margin: 40px 2px 20px 2px;
 		padding: 10px 15px;
@@ -296,7 +295,7 @@ body {
 	h3 {
 		margin: 0;
 		@include font-rem(28);
-		a { 
+		a {
 			color: $primary;
 		}
 		@media #{$medium} {
@@ -310,11 +309,11 @@ body {
 .list-item {
 	width: 100%;
 	text-align: left;
-	h4 { 
+	h4 {
 		@include font-rem(18);
-		margin-bottom: 0; 
+		margin-bottom: 0;
 	}
-	span { 
+	span {
 		display: block;
 		@include font-rem(14);
 		color: lighten($base-color,50);
@@ -328,7 +327,7 @@ body {
 	}
 }
 
-// Post Index 
+// Post Index
 // --------------------------------------------------
 #post-index {
 	#main {
@@ -377,7 +376,7 @@ body {
 .socialcount {
 	@include font-rem(16);
 	font-weight: 700;
-	li { 
+	li {
 		padding-left: 10px;
 		padding-right: 10px;
 	}
