--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,33 +2,19 @@
 layout: default
 ---
 
-<body id="page" {% if page.image.feature %}class="feature"{% endif %}>
+<header class="header-title">
+  <div class="header-title-wrap">
+    <h1>{{ site.title }}</h1>
+    <h2>{{ page.title }}</h2>
+  </div>
+</header>
 
-{% include _navmenu.html %}
+<div id="page" role="main">
+  {{ content }}
 
-{% if page.image.feature %}
-<div class="entry-header">
-  {% if page.image.credit %}<div class="image-credit">封图: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></div><!-- /.image-credit -->{% endif %}
-  <div class="entry-image" style="background-image: url({{ site.baseurl }}/images/{{ page.image.feature }});">
-    <!-- <img src="{{ site.baseurl }}/images/{{ page.image.feature }}" alt="{{ page.title }}"> -->
-  </div><!-- /.entry-image -->
-</div><!-- /.entry-header -->
-{% endif %}
-
-<div id="main" role="main">
-  <article class="entry">
-    <header class="header-title">
-      <div class="header-title-wrap">
-        <h1 class="entry-title">{{ page.title }}</h1>
-      </div><!-- /.header-title-wrap -->
-    </header>
-    <div class="entry-content">
-      {{ content }}
-      {% if site.duoshuo and page.comments %}
-      <!-- 多说评论框 start -->
-      <div class="ds-thread" data-thread-key="{{ page.comments }} " data-title="{{ page.title }}" data-url="{{ site.duoshuo_url }}{{ page.url }}"></div>
-      <!-- 多说评论框 end -->
-      {% endif %}
-    </div><!-- /.entry-content -->
-  </article>
-</div><!-- /#main -->
+  {% if site.duoshuo and page.comments %}
+  <!-- 多说评论框 start -->
+  <div class="ds-thread" data-thread-key="{{ page.comments }} " data-title="{{ page.title }}" data-url="{{ site.duoshuo_url }}{{ page.url }}"></div>
+  <!-- 多说评论框 end -->
+  {% endif %}
+</div>
