--- a/_sass/_adome.scss
+++ b/_sass/_adome.scss
@@ -8,8 +8,7 @@ body {
   background-color: $white;
 }
 
-#post,
-#page {
+#post {
   .entry-content {
     box-shadow: 0 0 0 0, 0 0 0 $white;
     @include rounded(0px);
@@ -65,5 +64,28 @@ body {
 #post {
   .entry-content > p {
     text-indent: 2em;
+  }
+}
+
+#page {
+  margin: 40px 2px 20px 2px;
+  @media #{$medium} {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  @media #{$large} {
+    max-width: 800px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  article {
+    padding: 25px 15px;
+    @media #{$medium} {
+      padding: 30px;
+    }
+    @media #{$large} {
+      padding: 30px 60px;
+    }
   }
 }
