Update nav menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   {% include _head.html %}
 
 </head>
-<body {% if page.image.feature %}class="feature"{% endif %}>
+<body id="top" {% if page.image.feature %}class="feature"{% endif %}>
 
   {% include _header.html %}
 
