--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -5,12 +5,13 @@
 <nav id="dl-menu" class="dl-menuwrapper" role="navigation">
   <button class="dl-trigger">展开菜单</button>
   <ul class="dl-menu">
+    <li><a href="#top"><i class="fa fa-fw fa-arrow-up"></i> 顶部</a></li>
     <li><a href="{{ site.baseurl }}/"><i class="fa fa-fw fa-home"></i> 首页</a></li>
-    <li><a href="{{ site.baseurl }}/posts/"><i class="fa fa-fw fa-clock-o"></i> 时光</a></li>
-    <li><a href="{{ site.baseurl }}/tags/"><i class="fa fa-fw fa-tags"></i> 标签</a></li>
     <li>
       <a href="#"><i class="fa fa-fw fa-ellipsis-h"></i> 更多</a>
       <ul class="dl-submenu">
+        <li><a href="{{ site.baseurl }}/posts/"><i class="fa fa-fw fa-clock-o"></i> 时光穿梭</a></li>
+        <li><a href="{{ site.baseurl }}/tags/"><i class="fa fa-fw fa-tags"></i> 标签浮云</a></li>
         <li><a href="{{ site.baseurl }}/notes/"><i class="fa fa-fw fa-book"></i> 知识笔记</a></li>
         <li><a href="{{ site.baseurl }}/convict/"><i class="fa fa-fw fa-power-off"></i> 囚徒日记</a></li>
       </ul><!-- /.dl-submenu -->
