External links in _blank

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -23,7 +23,7 @@
           <img src="{{ site.baseurl }}/images/{{ site.owner.avatar }}" alt="{{ site.owner.name }} photo" class="author-photo">
           <h4>{{ site.owner.name }}</h4>
           <p>{{ site.owner.bio }}</p>
-          <a href="http://github.com/{{ site.owner.github }}"><i class="fa fa-github"></i> GitHub</a>
+          <a href="http://github.com/{{ site.owner.github }}" target="_blank"><i class="fa fa-github"></i> GitHub</a>
         </li>
       </ul><!-- /.dl-submenu -->
     </li>
