--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -31,6 +31,6 @@
 </nav><!-- /.dl-menuwrapper -->
 
 <div class="entry-header">
-  {% if page.image.credit %}<div class="image-credit">封图: {% if page.image.creditlink %}<a href="{{ page.image.creditlink }}">{% endif %}{{ page.image.credit }}{% if page.image.creditlink %}</a>{% endif %}</div><!-- /.image-credit -->{% endif %}
+  {% if page.image.credit %}<div class="image-credit">封图: {% if page.image.creditlink %}<a href="{{ page.image.creditlink }}">{% endif %}{{ page.image.credit }}{% if page.image.creditlink %}</a>{% endif %}</div>{% endif %}
   {% if page.image.feature %}<div class="entry-image" style="background-image: url({{ site.baseurl }}/images/{{ page.image.feature }});"></div>{% endif %}
 </div>
