--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -5,7 +5,7 @@
 <nav id="dl-menu" class="dl-menuwrapper" role="navigation">
   <button class="dl-trigger">展开菜单</button>
   <ul class="dl-menu">
-    <li><a href="#top"><i class="fa fa-fw fa-arrow-up"></i> 顶部</a></li>
+    <li><a href="#top" class="dl-close"><i class="fa fa-fw fa-arrow-up"></i> 顶部</a></li>
     <li><a href="{{ site.baseurl }}/"><i class="fa fa-fw fa-home"></i> 首页</a></li>
     <li>
       <a href="#"><i class="fa fa-fw fa-ellipsis-h"></i> 更多</a>
