Move convicts to qiutu.org

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -13,7 +13,6 @@
         <li><a href="{{ site.baseurl }}/posts/"><i class="fa fa-fw fa-clock-o"></i> 时光穿梭</a></li>
         <li><a href="{{ site.baseurl }}/tags/"><i class="fa fa-fw fa-tags"></i> 标签浮云</a></li>
         <li><a href="{{ site.baseurl }}/notes/"><i class="fa fa-fw fa-book"></i> 知识笔记</a></li>
-        <li><a href="{{ site.baseurl }}/convict/"><i class="fa fa-fw fa-power-off"></i> 囚徒日记</a></li>
       </ul><!-- /.dl-submenu -->
     </li>
     <li>
@@ -23,7 +22,8 @@
           <img src="{{ site.baseurl }}/assets/images/{{ site.owner.avatar }}" alt="{{ site.owner.name }} photo" class="author-photo">
           <h4>{{ site.owner.name }}</h4>
           <p>{{ site.owner.bio }}</p>
-          <a href="http://github.com/{{ site.owner.github }}" target="_blank"><i class="fa fa-github"></i> GitHub</a>
+          <a href="http://github.com/aidistan" target="_blank"><i class="fa fa-github"></i> GitHub</a>
+          <a href="http://qiutu.org/users/1449/exercises" target="_blank"><i class="fa fa-male"></i> 囚徒健身</a>
         </li>
       </ul><!-- /.dl-submenu -->
     </li>
