--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -3,7 +3,7 @@
   pre {
     position: relative;
     margin: 0;
-    padding: 1em;
+    padding: 0 1em;
     @include font(14);
   }
   .c { color: #999988; font-style: italic } /* Comment */
