--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <article class="hentry">
     <header class="header-title">
       <div class="header-title-wrap">
-        <h1 class="entry-title"><a href="{{ site.baseurl }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a>{% if page.link %} <sup><a class="fa fa-external-link" href="{{ page.link }}" target="_blank""></a></sup>{% endif %}</h1>
+        <h1 class="entry-title"><a href="{{ site.baseurl }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a>{% if page.link %} <sup><a class="fa fa-external-link" href="{{ page.link }}" target="_blank"></a></sup>{% endif %}</h1>
       </div><!-- /.header-title-wrap -->
     </header>
 
